# rust-ebay-scrapper

./: .gitignore  BROWSER_OPTIMIZATIONS.md  Cargo.toml  LICENCE.md  README.md  all_item.txt  ebay_soup.html
src/: ebay_getter.rs  main.rs
