[package]
name = "rust_ebay"
version = "0.1.0"
edition = "2021"

[dependencies]
headless_chrome = "1.0.15"
scraper = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
chrono = "0.4"
ctrlc = "3.4"
rayon = "1.10"
eframe = "0.28"
rfd = "0.15"
ego-tree = "0.10"
